# airflow-ingest-stateful-table-trigger

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/geekdotdev/airflow/ingest/stateful/table/trigger/: statefultableingesttriggers.py
